fix not aligned background image

--- a/style.css
+++ b/style.css
@@ -2,14 +2,18 @@ body{
     overflow-x: hidden;
     width: 100wh;
     height: 100vh;
-    background-image: url(images/teatime\ bg.png);
-    background-size: cover;
-    background-repeat: no-repeat;
     color: black;
     background-color: transparent;
     line-height: 1.7;
     font-family: 'Roboto', sans-serif;
 }
+
+.bg-image {
+    background-image: url(images/teatime\ bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .text-center
 {
     text-align: center;
